# sports-autoresearch

./: .gitignore  BACKGROUND_RUNNING.md  GITHUB_GUIDE.md  README.md  ROLLING_INSIGHTS_GUIDE.md  add_sports.py  app.py  check_nba_data.py  combine_historical_odds.py  database.py  deploy.sh  download_moneypuck_nhl.py  download_premier_league.py  engineer_current_features.py  engineer_features.py  fetch_espn_clean.py  fetch_free_data.py  fetch_historical_balldontlie.py  fetch_historical_espn.py  fetch_historical_mysportsfeeds.py  fetch_historical_soccer.py  fetch_historical_sportsipy.py  fetch_historical_sportsref.py  fetch_injuries.py  fetch_kaggle_odds.py  fetch_nba_nbaapi.py  fetch_news.py  fetch_nhl_official.py  fetch_odds.py  fetch_odds_historical.py  fetch_odds_nhl_soccer.py  fetch_sbr_odds.py  improve_nba_data.py  improve_nhl_data.py  improve_soccer_data.py  integrate_injuries.py  mlb_enhanced.py  predict_current.py  prepare.py  process_espn_data.py  (+30 more)
templates/: dashboard.html
