[project]
name = "sports-autoresearch"
version = "0.1.0"
description = "Autonomous sports betting research swarm using Cascade/Windsurf"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xgboost>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]
